--- a/Hungry Yeti/Podfile
+++ b/Hungry Yeti/Podfile
@@ -1,6 +1,3 @@
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '8.0'
-pod 'AFNetworking', '~> 2.5'
+pod 'AFNetworking'
 pod 'BDBOAuth1Manager'
-pod 'SwiftyJSON', '~> 2.2.0'
-use_frameworks!
+
